@@ -37,22 +37,19 @@
 
 import IECore
 
+import Gaffer
 import GafferUI
-from PlugValueWidget import PlugValueWidget
 
 QtGui = GafferUI._qtImport( "QtGui" )
 
-## \todo Useful popup menu on label - connect, disconnect, expressions etc
-## Or does that belong on the PlugValueWidget? It probably belongs on the PlugValueWidget
-## so that compound plugs can have a different menu for each child - for the x y z of
-## a V3fPlug for instance. I'm not even sure this class is necessary - perhaps the
-## NodeUI should just make an appropriate label itself when needed. Perhaps we should
-## also be using a non-editable NameWidget so that the name updates if the plug name
-## changes. In fact, I think what we want is a NameLabel class and possibly a PlugLabel
-## class derived from that.
+## \todo This could provide functionality for arbitrary Widgets to be placed
+## on the right, which combined with the ability to find a 
+## PlugWidget given a Plug could be quite useful for many things. Perhaps
+## it should also be derived from PlugValueWidget - this could make it very
+## easy to add a popup menu to the label.
 class PlugWidget( GafferUI.Widget ) :
 
-	def __init__( self, plugOrPlugValueWidget, label=None, description=None, **kw ) :
+	def __init__( self, plugOrWidget, label=None, description=None, **kw ) :
 	
 		GafferUI.Widget.__init__( self, QtGui.QWidget(), **kw )
 
@@ -62,13 +59,14 @@ class PlugWidget( GafferUI.Widget ) :
 		layout.setSizeConstraint( QtGui.QLayout.SetMinAndMaxSize )
 		self._qtWidget().setLayout( layout )
 
-		if isinstance( plugOrPlugValueWidget, PlugValueWidget ) :
-			self.__valueWidget = plugOrPlugValueWidget
-			plug = self.__valueWidget.getPlug()
-		else :
-			self.__valueWidget = PlugValueWidget.create( plugOrPlugValueWidget )
+		if isinstance( plugOrWidget, Gaffer.Plug ) :
+			self.__valueWidget = GafferUI.PlugValueWidget.create( plugOrPlugValueWidget )
 			plug = plugOrPlugValueWidget
-
+		else :
+			assert( isinstance( plugOrWidget, GafferUI.PlugValueWidget ) or hasattr( plugOrWidget, "plugValueWidget" ) )
+			self.__valueWidget = plugOrWidget
+			plug = self.plugValueWidget().getPlug()
+			
 		self.__label = GafferUI.Label(
 			label or IECore.CamelCase.toSpaced( plug.getName() ),
 			horizontalAlignment = GafferUI.Label.HorizontalAlignment.Right,
@@ -78,8 +76,18 @@ class PlugWidget( GafferUI.Widget ) :
 		# interface. Perhaps we should have a SizeableContainer or something?
 		self.__label._qtWidget().setMinimumWidth( self.labelWidth() )
 		
+		if description is not None :
+			self.__label.setToolTip( description )
+		
 		layout.addWidget( self.__label._qtWidget() )
 		layout.addWidget( self.__valueWidget._qtWidget() )
+
+	def plugValueWidget( self ) :
+	
+		if isinstance( self.__valueWidget, GafferUI.PlugValueWidget ) :
+			return self.__valueWidget
+		else :
+			return self.__valueWidget.plugValueWidget()
 
 	@staticmethod
 	def labelWidth() :
